# kinvastu

./: .gitignore  README.md  astro_vastu_pro.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
astro_vastu/: __init__.py  config.py  exceptions.py  main.py  personalized.py
astro_vastu/astro/: __init__.py  calculator.py  mappings.py
astro_vastu/core/: __init__.py  brahmasthan.py  vastu_chart.py  vastu_data.py  vastu_table.py
astro_vastu/data/: vastu_directions.json
astro_vastu/models/: __init__.py  config.py
astro_vastu/utils/: __init__.py  formatters.py  time_utils.py
kinvastu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
